# keda

./: .env.example  .gitignore  .iar.toml  .pre-commit-config.yaml  .testmondata-shm  .testmondata-wal  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TEST_RECOVER_PUBLISH.md  config.toml  docker-compose.dokploy.yml  docker-compose.yml  install.sh  justfile  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  roadmap.md  staged_changes.diff
.agent-runner/: commit-request.json
.cursor/: AGENTS.md
.github/workflows/: cd.yml  ci.yml  deploy-preview.yml  install-smoke.yml  release.yml  validation-gate.yml
alembic/: env.py
deploy/vps-traefik/: README.md  deploy-preview.sh  preview.env.example
docs/: getting-started.md
docs/ai-standards/: architecture.md  code-reuse.md  comments-docstrings.md  testing.md  tooling.md
docs/api/: references.md
docs/architecture/: frontend-architecture.md  system-design.md
docs/getting-started/: installation.md
docs/guides/: agent-runner.md  configuration.md  deployment.md  iar-loop.md  prd-standard.md
frontend/: nginx.conf  vite.config.ts
frontend-admin/: pnpm-lock.yaml  vite.config.ts
frontend-public/: next.config.ts  package.json  pnpm-lock.yaml
frontend-public/lib/: utils.ts
frontend/src/: main-app.tsx
hooks/: check_architecture.py  check_guidelines_consistency.py  check_prd_acceptance_checklist.py  check_prd_archive_pre_push.py  check_schema_conventions.py  check_sqlalchemy_model_comments.py  duplication_check_utils.py  run_jscpd_duplication_check.py
hooks/shared/: check_architecture.py  check_guidelines_consistency.py  check_max_file_lines.py  check_prd_acceptance_checklist.py  check_sqlalchemy_model_comments.py  max_file_lines.allowlist.txt
scripts/: README.md  _apply.py  _remote.py  git_worktree.sh  preview_env.py  provision_preview_server.py  roadmap_realistic_validation.py  rv_capture.sh  rv_follow.py  rv_kill_live_pid.py  rv_render_png.py  rv_setup_fixture.py  rv_spawn_live_pid.py  sync_skills_from_template.py
scripts/backup_service/: main.py  (+1 more)
tests/: conftest.py  test_agent_config_consistency.py  test_agent_failure_resolver.py  test_agent_review.py  test_agent_runner_api.py  test_agent_runner_cli.py  test_agent_runner_commit.py  test_agent_runner_config.py  test_agent_runner_console_api.py  test_agent_runner_container.py  test_agent_runner_daemon_override.py  test_agent_runner_daemon_ttl.py  test_agent_runner_deliberation_issues.py  test_agent_runner_dependencies.py  test_agent_runner_feedback.py  test_agent_runner_git.py  test_agent_runner_init.py  test_agent_runner_init_flow.py  test_agent_runner_memory.py  test_agent_runner_memory_anchoring.py  test_agent_runner_merge_queue.py  test_agent_runner_monitor.py  test_agent_runner_orchestrate.py  test_agent_runner_reclaim.py  test_agent_runner_skill_distillation.py  test_agent_runner_skill_retrieval.py  test_agent_runner_structured_evidence.py  test_agent_runner_supervisor_entrypoints.py  test_agent_runner_takeover.py  test_agent_runner_validation.py  test_agent_runner_workflow.py  test_agent_runner_workflow_install.py  test_archive_tasks.py  test_backup_restore.py  test_blocked_continue.py  test_check_max_file_lines.py  test_cli_container.py  test_cli_loop.py  test_cli_registry.py  test_console_actions.py  (+53 more)
(+462 files in other folders)
