[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.37.0",
    "fastapi>=0.115.0",
    "langchain-core>=1.2.7",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "tomlkit>=0.15.0",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
iar = "backend.api.cli:main"

[project.optional-dependencies]
llm = [
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylint>=3.2.0",
    "pytest>=8.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.14",
    "socksio>=1.0.0",
]
