[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keda"
version = "0.2.0"
description = "Issue Agent Runner (iar) — turn GitHub Issues into a local AI agent queue."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "zata"},
]
keywords = ["ai-agent", "clean-architecture", "monorepo-template", "issue-runner", "git-worktree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.37.0",
    "croniter>=3.0.0",
    "fastapi>=0.115.0",
    "langchain-core>=1.2.7",
    "pre-commit>=4.5.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.3",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "tomlkit>=0.15.0",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
iar = "backend.api.cli:main"

[project.optional-dependencies]
llm = [
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"backend.engines.agent_runner.templates" = ["**/*"]
"backend.engines.agent_runner.skills" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylint>=3.2.0",
    "pytest>=8.3.0",
    "pytest-testmon>=2.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.14",
    "socksio>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "--testmon"

[tool.ruff]
target-version = "py311"
line-length = 100
